Avoid crashes on mobile when pinch-to-zooming (#73)
* make sr-only offset a more managable amount

* experiment disabling blur effect

* set fadeOut:true as default

--- a/src/Containers/App/style.css
+++ b/src/Containers/App/style.css
@@ -53,7 +53,7 @@ ol {
 }
 
 .sr-only {
-  left:-9999px;
+  left:-999px;
   position:absolute;
   top:auto;
   width:1px;
